--- a/internal/app/templates/dashboard.templ
+++ b/internal/app/templates/dashboard.templ
@@ -37,4 +37,4 @@
 </section>
 {{end}}
 
-{{define "dashboard.html"}}{{template "content" .}}{{end}}
+{{define "dashboard.templ"}}{{template "content" .}}{{end}}
