--- a/internal/app/templates/login.templ
+++ b/internal/app/templates/login.templ
@@ -17,4 +17,4 @@
 </article>
 {{end}}
 
-{{define "login.html"}}{{template "content" .}}{{end}}
+{{define "login.templ"}}{{template "content" .}}{{end}}
